--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -12,6 +12,7 @@ html {
 body {
     margin: 0;
     background-color: white;
+    scroll-snap-type: y mandatory;
 }
 
 :root {
